12 Jan 2004 mipsator
 * imported preliminary code for our pkg-config alternative.

11 Jan 2004 mipsator
 * added more C++ support in some checks (handle CXXFLAGS when needed).
 * improved some checks to be more verbose on used variables.
 * removed a fix into check_config() that was wrong.
 * added check_cfgt_data() to load config tool data only when needed.

# snapshot 0.7.10

08 Jan 2004 mipsator
 * fixed segfault on some platform when cleaning cfgtdata.

06 Jan 2004 mipsator
 * fixed recording of cfgtool path in pmk_check_config().

05 Jan 2004 mipsator
 * improved check_mode() in pmkinstall.c, patch provided by
						Pedro Martelletto.
 * improved a bit pmkcfg.sh to use a list of templates.
 * set INSTALL back to install and added a special comment for HPUX.
 * changed hash.c and hash.h to use better types.
 * fixed pmkinstall bug when destination already existed.
 * INSTALL can now safely set (back) to pmkinstall.

03 Jan 2004 mipsator
 * fixed get_make_var() by replacing misused mkstemp() by tmps_open().
 * simplified mkstemps() to remove warnings about the cast.
 * improved a bit comp_test.c to display more info.
 * fixed compiler detection failure.
 * fixed makefiles for HPUX.
 * fixed pmkcomp.dat to use unique id for each compiler definition.
 * fixed use of int64_t on the Tru64 platform.

# snapshot 0.7.9

02 Jan 2004 xsa
 * added PC_PATH_LIB to pmk.conf (look if PREFIX/lib/pkgconfig exists).
 * updated pmk.conf.5 accordinally.

02 Jan 2004 mipsator
 * added diverting from CHECK_PKG_CONFIG to CHECK_CONFIG.
 * added data file for specific config tool options.
 * added support for specific config tool options (huge).
 * finalized pkgconfig support.

01 Jan 2004 mipsator
 * added pkg_cell_add() and pkg_mod_exists() in pkgconfig.
 * rewritten pkg_recurse() to use pkg_cell_add().
 * updated test/pkgconfig_test.c in sync pkgconfig support changes.
 * wished happy new year :)
 * introduced internal pkgconfig support in CHECK_PKG_CONFIG.

31 Dec 2003 mipsator