@@ -1,5 +1,10 @@
 12 Jan 2004 mipsator
  * imported preliminary code for our pkg-config alternative.
+ * got rid of cfgrm, cfgum and config targets in Makefile template.
+ * added showmode, sm and fclean targets in Makefile template.
+ * modified clean target in Makefile template.
+ * updated pmkcfg.sh and pmkfile to set the used mode.
+ * added support for pmkpc in Makefile template.
 
 11 Jan 2004 mipsator
  * added more C++ support in some checks (handle CXXFLAGS when needed).
